# cloudflare-dns-updater

./: .gitignore  Cargo.toml  README.md  config.toml.example  default.nix  devShell.nix  flake.nix  module.nix  shell.nix
src/: get_stable_ipv6.rs  main.rs
