[package]
name = "cloudflare_dns_updater"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
public-ip = "0.2.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
